# contracts

./: .gitignore  BRANCHINFO  README.md  contracts-checkout.sh  hcc.cabal
contracts/: AndLists.hs  Bad.hs  Bool.hs  Contracts.hs  Counterexample.hs  DefaultBug.hs  Filter.hs  Fix.hs  Good.hs  Head.hs  HigherOrder.hs  Id.hs  Language.hs  Loop.hs  Max.hs  Nat.hs  NestedBad.hs  PredLog.hs  PredLogUsing.hs  Recursion.hs  RecursiveTrue.hs  Risers.hs  Risers.optimised.vampire.succeeds.p  Risers.separate_goal_ideas.tptp  Simple.hs  Subtraction.hs  Test.hs  WithMany.hs  Xor.hs  runner.sh  zpar
new-testsuite/: Incompleteness.hs  Length.hs  Makefile  Nat.hs  NatLe.hs
smt-test/: Crash_free_pairs.smt  Crash_free_pairs.tptp  Crash_free_pairs_mail
src/: Main.hs  Paramod.hs  small  sub-1  sub-2
techreport/: hcc-contracts.tex  hcc-discussion.tex  hcc-examples.tex  hcc-extensions.tex  hcc-finite-model-proof.tex  hcc-future.tex  hcc-implementation.tex  hcc-introduction.tex  hcc-koen-min.tex  hcc-language.tex  hcc-min-leftover.tex  hcc-popl.bib  hcc-popl.tex  hcc-related.tex  hcc-resultstable.tex  hcc-techreport.sty  hcc-techreport.tex  hcc-verification.tex  testtable.tex
tests/: Ack.hs  AndLists.hs  AnyMorphism.hs  Bad.hs  Filter.hs  Foldr1.hs  Head.hs  Infinite.hs  Loop.hs  PredLog.hs  Recursion.hs  RecursiveTrue.hs  Risers.hs  Shrink.hs  Simple.hs  Simplify.hs  WithMany.hs  Xor.hs  clean.sh  run-tests.sh  time-tests.sh
testsuite/: AnyMorphism.hs  Bad.hs  BigTestResults.md  Contracts.hs  Counterexample.hs  DefaultBehaviour.hs  (+45 more)
testsuite-lite/: Any.hs  Bad.hs  Length.hs  Nat.hs
(+84 files in other folders)
