name:               hcc
version:            0.2
author:             Dan Rosén
maintainer:         danr@student.gu.se
synopsis:           Haskell Contract Checker
category:           Proving
stability:          Experimental
cabal-version:      >= 1.6
build-type:         Simple
homepage:           github.com/danr/contracts

executable          hcc
    ghc-options:    -O2 -package ghc -Wall -auto-all
    hs-source-dirs: src halo/src
    main-is:        Main.hs

    build-depends:
        -- Shared
        base           >= 4    && < 5,
        mtl            >= 2.0,
        containers     >= 0.3,

        -- Command-line Arguments
        cmdargs        >= 0.9,

        -- Halo
        geniplate      >= 0.6.0.1,
        bimap          >= 0.2,
        ghc-paths      >= 0.1,
        filepath       >= 1.0,
        dlist          >= 0.5
